# tokanban

./: .mcp.json  Cargo.toml  LICENSE  README.md  TESTING.md  hooks  skills  templates
.claude-plugin/: marketplace.json  plugin.json
plugins/tokanban/.claude-plugin/: plugin.json
plugins/tokanban/hooks/: memory-session-end.sh  memory-session-start.sh
plugins/tokanban/skills/memory/: SKILL.md
plugins/tokanban/skills/setup/: SKILL.md
plugins/tokanban/skills/tokanban/: SKILL.md
plugins/tokanban/skills/tokanban/references/: cli-quick-ref.md
plugins/tokanban/templates/: AGENTS.md.memory-block.md  CLAUDE.md.memory-block.md  cursorrules.memory-block.md
skills/setup/: SKILL.md
skills/tokanban/: SKILL.md
skills/tokanban/references/: cli-quick-ref.md
src/: cli.rs  ctx.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  types.rs
src/auth/: mod.rs  oauth.rs  token.rs
src/commands/: agent.rs  auth.rs  comment.rs  completion.rs  entity.rs  import.rs  member.rs  memory.rs  mod.rs  project.rs  sprint.rs  task.rs  viz.rs  workflow.rs  workspace.rs
src/config/: mod.rs  types.rs
src/format/: card.rs  inline.rs  json.rs  mod.rs  table.rs
src/output/: mod.rs
templates/: AGENTS.md.memory-block.md  CLAUDE.md.memory-block.md
tests/: api_tests.rs  auth_tests.rs  command_tests.rs  completion_tests.rs  config_tests.rs  integration_tests.rs  memory_template_tests.rs  output_tests.rs
tests/common/: fixtures.rs  mock_server.rs  mod.rs
